# vindmolle_boligpris

./: .gitignore  eda.py  experiment_tracking.py  main.ipynb  main.py  pyproject.toml
models/: data_handler.py  experiment_tracking.py  linear_regression.py  preprocessing.py
