[project]
name = "vindmolle-boligpris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.0.0",
    "duckdb>=1.4.3",
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "mlflow>=3.9.0",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0",
]
