[project]
name = "vindmolle-boligpris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "altair>=6.0.0",
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "marimo>=0.19.8",
    "matplotlib>=3.10.8",
    "mlflow>=3.9.0",
    "numpy>=2.1,<2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "ruff>=0.15.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
    'shap>=0.50.0',
    "optuna>=4.7.0",
    "optuna-integration>=4.7.0",
]
